# light_control_app

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
src/: main.rs
src/app/: mod.rs
src/app/light_control/: light_control.rs  light_control_thread.rs  main.rs  mod.rs
src/app/sensor_control/: main.rs
src/common/: constants.rs  mod.rs  traits.rs
