[package]
name = "light_control_app"
version = "0.1.0"
edition = "2018"

[dependencies]
openssl = { version = "0.10.35", features = ["vendored"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "light_control"
path = "src/app/light_control/main.rs"

[[bin]]
name = "main"
path = "src/main.rs"
